--- a/teachdentistry/templates/base.html
+++ b/teachdentistry/templates/base.html
@@ -127,7 +127,7 @@
     {% endblock %}
 
     <script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.10.1.min.js"></script>
-    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+    <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
     
     {% compress js %}
         <script type="text/javascript" src="{{STATIC_URL}}bootstrap/js/bootstrap.js"></script>
