--- a/teachdentistry/templates/main/map.html
+++ b/teachdentistry/templates/main/map.html
@@ -53,7 +53,10 @@
     {% if accessible %}
         <script type="text/javascript">        
             jQuery(document).ready(function() {
-                var view = new EducatorMapView({el: "#map-container"}); 
+                var view = new EducatorMapView({
+                    el: "#map-container",
+                    staticURL: "{{STATIC_URL}}"
+                }); 
             });
         </script>
     {% endif %}
